[package]
name = "kernlog"
version = "0.2.1"
description = "Kernel logger implementation (for low level logging to `/dev/kmsg`)."
authors = ["Konstantin Stepanov <me@kstep.me>"]
readme = "README.md"
repository = "https://github.com/kstep/kernlog.rs.git"
documentation = "http://kstep.me/kernlog.rs/kernlog/index.html"
license = "MIT"
keywords = ["kmsg", "log", "logger", "kernel", "dmesg"]

[dependencies]
log = "*"

[features]
nightly = []
